# PostersProject-IA

./: .gitignore  README.md  analisis_diferencias_scripts.md  app.py  core.py  pyproject.toml  requirements.txt
legacy/src/core/: analyzer.py
legacy/src/web/: app.py
scripts/: db_purger.py  local_purger.py  run_cleanup.py
src/core/: analyzer.py  paths.py
src/web/: app.py
